# slint-mpv-widget

./: Cargo.toml  README.md  build.rs  default.nix
src/: gl.rs  main.rs  mpv.rs  mpv_sys.rs
src/mpv/: sys.rs
ui/: main.slint
