[package]
name = "mpv-player"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = { version = "0.13" }
rfd = { version = "0.13", default-features = false, features = ["xdg-portal", "async-std"] }
slint = { version = "1.3" }

[build-dependencies]
slint-build = { version = "1.3" }
